<resources>
    <string name="app_name">RSMS Calculator</string>
    <!--numbers-->
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>
    <!--simple operators-->
    <string name="btn_addition">+</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_multiplication">×</string>
    <string name="btn_division">÷</string>
    <string name="btn_equals">=</string>
    <string name="btn_percentage">%</string>
    <string name="btn_plusMinus">+/-</string>
    <string name="btn_clear">C</string>
    <string name="btn_comma">,</string>
    <string name="btn_dot">.</string>
    <string name="btn_sin">sin(x)</string>
    <string name="btn_cos">cos(x)</string>
    <string name="btn_tg">tg(x)</string>
    <string name="btn_ln">ln(x)</string>
    <string name="btn_asin">arcsin(x)</string>
    <string name="btn_acos">arccos(x)</string>
    <string name="btn_atg">arctg(x)</string>
    <string name="btn_log">log(x)</string>
    <string name="btn_factorial">n!</string>
    <string name="btn_openPar">(</string>
    <string name="btn_closePar">)</string>
    <string name="btn_exp">x^y</string>
    <string name="btn_exp2">x^2</string>
    <string name="btn_expInv">x^-1</string>
    <string name="btn_sqrt">√</string>
    <string name="btn_modulus">mod</string>


</resources>