<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOpenPar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="PARENTHESIS_OPEN"
                android:textSize="16sp"
                android:text="@string/btn_openPar" />

            <Button
                android:id="@+id/btnClosePar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="PARENTHESIS_CLOSE"
                android:textSize="16sp"
                android:text="@string/btn_closePar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="backspace"
                app:icon="@drawable/ic_baseline_backspace_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clear"
                android:textSize="28sp"
                android:text="@string/btn_clear" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnExp"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="EXPONENTIATION"
                android:textSize="16sp"
                android:text="@string/btn_exp" />

            <Button
                android:id="@+id/btnExp2"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="EXPONENTIATION_2"
                android:textSize="16sp"
                android:text="@string/btn_exp2" />

            <Button
                android:id="@+id/btnExpInv"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="EXPONENTIATION_INV"
                android:textSize="16sp"
                android:text="@string/btn_expInv" />

            <Button
                android:id="@+id/btnModulus"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="MODULUS"
                android:textSize="16sp"
                android:text="@string/btn_modulus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnASin"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="ASIN"
                android:textSize="16sp"
                android:text="@string/btn_asin" />

            <Button
                android:id="@+id/btnACos"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="ACOS"
                android:textSize="16sp"
                android:text="@string/btn_acos" />

            <Button
                android:id="@+id/btnATg"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="ATG"
                android:textSize="16sp"
                android:text="@string/btn_atg" />

            <Button
                android:id="@+id/btnLog"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="LOG"
                android:textSize="16sp"
                android:text="@string/btn_log" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSin"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="SIN"
                android:textSize="16sp"
                android:text="@string/btn_sin" />

            <Button
                android:id="@+id/btnCos"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="COS"
                android:textSize="16sp"
                android:text="@string/btn_cos" />

            <Button
                android:id="@+id/btnTg"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="TG"
                android:textSize="16sp"
                android:text="@string/btn_tg" />

            <Button
                android:id="@+id/btnLn"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="LN"
                android:textSize="16sp"
                android:text="@string/btn_ln" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFactorial"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="FACTORIAL"
                android:textSize="16sp"
                android:text="@string/btn_factorial" />

            <Button
                android:id="@+id/btnPlusMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="invertSign"
                android:textSize="16sp"
                android:text="@string/btn_plusMinus" />

            <Button
                android:id="@+id/btnPercent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="PERCENTAGE"
                android:textSize="16sp"
                android:text="@string/btn_percentage" />

            <Button
                android:id="@+id/btnSquareRoot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="SQUARE_ROOT"
                android:text="@string/btn_sqrt"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="SEVEN"
                android:textSize="28sp"
                android:text="@string/btn_seven" />

            <Button
                android:id="@+id/btnEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="EIGHT"
                android:textSize="28sp"
                android:text="@string/btn_eight" />

            <Button
                android:id="@+id/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="NINE"
                android:textSize="28sp"
                android:text="@string/btn_nine" />

            <Button
                android:id="@+id/btnDivision"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="DIVISION"
                android:text="@string/btn_division"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="FOUR"
                android:textSize="28sp"
                android:text="@string/btn_four" />

            <Button
                android:id="@+id/btnFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="FIVE"
                android:textSize="28sp"
                android:text="@string/btn_five" />

            <Button
                android:id="@+id/btnSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="SIX"
                android:textSize="28sp"
                android:text="@string/btn_six" />

            <Button
                android:id="@+id/btnMultiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="MULTIPLICATION"
                android:text="@string/btn_multiplication"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="ONE"
                android:text="@string/btn_one"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="TWO"
                android:textSize="28sp"
                android:text="@string/btn_two" />

            <Button
                android:id="@+id/btnThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="THREE"
                android:textSize="28sp"
                android:text="@string/btn_three" />

            <Button
                android:id="@+id/btnSubtraction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="SUBTRACTION"
                android:text="@string/btn_subtraction"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="ZERO"
                android:textSize="28sp"
                android:text="@string/btn_zero" />

            <Button
                android:id="@+id/btnComa"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="numberInput"
                android:tag="DOT"
                android:textSize="28sp"
                android:text="@string/btn_dot" />

            <Button
                android:id="@+id/btnEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="eval"
                android:textSize="28sp"
                android:text="@string/btn_equals" />

            <Button
                android:id="@+id/btnAddition"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationInput"
                android:tag="ADDITION"
                android:text="@string/btn_addition"
                android:textSize="28sp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="bottom|end"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|end"
        android:lines="11"
        android:maxLines="11"
        android:minLines="11"
        android:scrollbars="vertical"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tvExpression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="bottom|end"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>